# Test-Framework-for-LDBC

./: CMakeLists.txt  README.md
include/: CPU_Community_Detection.hpp  CPU_PageRank.hpp  CPU_connected_components.hpp  GPU_Community_Detection.cuh  GPU_PageRank.cuh
src/: GPU_Community_Detection.cu  GPU_PageRank.cu  Union-Find.cu  test.cpp
